--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">阿煒的第一個網站</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="我的大頭照" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -188,15 +188,15 @@
             <section class="resume-section" id="daily">
                 <div class="resume-section-content">
                     <h2 class="mb-5">生活日常</h2>
-                    <a href="assets/photo/001.jpg" target="_blank"><img src="/assets/photo/001.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
-                    <a href="assets/photo/008.jpg" target="_blank"><img src="/assets/photo/008.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
-                    <a href="assets/photo/222.jpg" target="_blank"><img src="/assets/photo/222.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
-                    <a href="assets/photo/004.jpg" target="_blank"><img src="/assets/photo/004.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
-                    <a href="assets/photo/005.jpg" target="_blank"><img src="/assets/photo/005.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
-                    <a href="assets/photo/06.jpg" target="_blank"><img src="/assets/photo/06.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
-                    <a href="assets/photo/333.jpg" target="_blank"><img src="/assets/photo/333.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
-                    <a href="assets/photo/007.jpg" target="_blank"><img src="/assets/photo/007.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
-                    <a href="assets/photo/09.jpg" target="_blank"><img src="/assets/photo/09.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
+                    <a href="assets/photo/001.jpg" target="_blank"><img src="/assets/photo/001.jpg" alt="打遊戲的照片" width="30%" class="clairecrop"></a>
+                    <a href="assets/photo/008.jpg" target="_blank"><img src="/assets/photo/008.jpg" alt="出去玩的照片" width="30%" class="clairecrop"></a>
+                    <a href="assets/photo/222.jpg" target="_blank"><img src="/assets/photo/222.jpg" alt="芬蘭騎馬的照片" width="30%" class="clairecrop"></a>
+                    <a href="assets/photo/004.jpg" target="_blank"><img src="/assets/photo/004.jpg" alt="出去玩的照片" width="30%" class="clairecrop"></a>
+                    <a href="assets/photo/005.jpg" target="_blank"><img src="/assets/photo/005.jpg" alt="玩sub的照片" width="30%" class="clairecrop"></a>
+                    <a href="assets/photo/06.jpg" target="_blank"><img src="/assets/photo/06.jpg" alt="賽後自拍的照片" width="30%" class="clairecrop"></a>
+                    <a href="assets/photo/333.jpg" target="_blank"><img src="/assets/photo/333.jpg" alt="烏龜的照片" width="30%" class="clairecrop"></a>
+                    <a href="assets/photo/007.jpg" target="_blank"><img src="/assets/photo/007.jpg" alt="空手道的照片" width="30%" class="clairecrop"></a>
+                    <a href="assets/photo/09.jpg" target="_blank"><img src="/assets/photo/09.jpg" alt="多多的照片" width="30%" class="clairecrop"></a>
                 </div>
             </section>
             <section>
